--- a/styles/index2.html
+++ b/styles/index2.html
@@ -3,9 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>git練習</title>
+    <link rel="stylesheet" href="./style.css">
 </head>
 <body>
-    
+    <h1>git</h1>
+    <p>123</p>
+    <p>456</p>
+    <p>789</p>
 </body>
 </html>
